# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2019-09-14 Michael Truog   <mjtruog at protonmail dot com>

    * The cloudi executable will not create a
      ${HOME}/.erlang.cookie file now
    * Use the cloudi executable node name for the
      /tmp pipe directory used for the Erlang shell and
      the default pid file name

2019-09-07 Michael Truog   <mjtruog at protonmail dot com>

    * Ignore the DEP0097 runtime deprecation in the
      Javascript CloudI API due to required domain module use
      (prevents stderr output logged as ERROR that is not an error)
    * Add Cabal package version check for testing GHC 8.8.1
    * Update Haskell CloudI API dependencies to work with
      GHC >= 8.8.1 and Cabal >= 3.0.0

2019-09-01 Michael Truog   <mjtruog at protonmail dot com>

    * Add support for GCC 8.3.0
    * Add support for clang 8.0.0

2019-08-24 Michael Truog   <mjtruog at protonmail dot com>

    * Add "type" to the CloudI Service API JSON response for services
    * Add "type", "prefix", "file_path", "module" to the
      CloudI Service API response for services_status
    * Fix errors in cloudi_service_api_requests caused by invalid input
    * Update nodefinder

2019-05-18 Michael Truog   <mjtruog at protonmail dot com>

    * Add Erlang/OTP 23 compatibility
    * Add OCaml 4.08.0 compatibility
    * Update the Erlang binary term format encoding implementations
      to support Erlang/OTP 23 with the programming languages
      Go, Haskell, Java, Javascript, OCaml, Perl, PHP, Python and Ruby
    * Update uuid

2019-04-05 Michael Truog   <mjtruog at protonmail dot com>

    * Update Python Erlang binary term format encoding

2019-03-23 Michael Truog   <mjtruog at protonmail dot com>

    * Allow ACL strings to not contain pattern characters for
      exact matches (now ACL non-pattern strings are no longer
      modified to become patterns by adding a "*" suffix)
