@@ -47,6 +47,18 @@ if [ -z "$CLOUDI_PID_FILE" ]; then
     CLOUDI_PID_FILE="$ROOT_LOG_DIR/$CLOUDI_NODE_NAME.pid"
 fi
 
+# If the CloudI configuration causes a Distributed Erlang node connection to be
+# attempted during a stop or restart
+# (e.g., in cloudi_core_i_nodes.erl or nodefinder, due to the use of
+#  net_kernel:connect_node/1 or net_kernel:hidden_connect_node/1),
+# net_kernel source code will cause a delay based on its SETUPTIME define of
+# 7 seconds (it will take longer than 7 seconds).
+#
+# The SHUTDOWN_TIME_MAX value provides the maximum time a stop or restart
+# will take
+# (within the Erlang VM source code,
+#  it can take ~10 seconds longer than that value).
+#
 # based on TIMEOUT_TERMINATE_MAX in cloudi_core_i_constants.hrl (milliseconds)
 SHUTDOWN_TIME_MAX=65000
 
