@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2019-09-15 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Add cloudi executable comment about stop and restart delay
+
 2019-09-14 Michael Truog   <mjtruog at protonmail dot com>
 
     * The cloudi executable will not create a
